不要ファイルの削除＆gitignoreの修正

--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,15 @@ dmypy.json
 # ファイルサイズが大きすぎる
 *_YEARS_0.txt
 *.ipynb
+
+STORM_DATA_IBTRACS_WP_1000_YEARS_0.txt
+STORM_DATA_IBTRACS_WP_1000_YEARS_1.txt
+STORM_DATA_IBTRACS_WP_1000_YEARS_2.txt
+STORM_DATA_IBTRACS_WP_1000_YEARS_3.txt
+STORM_DATA_IBTRACS_WP_1000_YEARS_4.txt
+STORM_DATA_IBTRACS_WP_1000_YEARS_5.txt
+STORM_DATA_IBTRACS_WP_1000_YEARS_6.txt
+STORM_DATA_IBTRACS_WP_1000_YEARS_7.txt
+STORM_DATA_IBTRACS_WP_1000_YEARS_8.txt
+STORM_DATA_IBTRACS_WP_1000_YEARS_9.txt
+
